# Basic parameters; check that these match your project / environment
cmake_minimum_required(VERSION 3.9)

# Replace "game" with a name for your project (this is used the name of the output)
project(32blit-examples)

# ... and any other files you want in the release here
set(PROJECT_DISTRIBS LICENSE README.md)

# Build configuration; approach this with caution!
if(MSVC)
  add_compile_options("/W4" "/wd4244" "/wd4324" "/wd4458" "/wd4100")
else()
  add_compile_options("-Wall" "-Wextra" "-Wdouble-promotion" "-Wno-unused-parameter")
endif()

find_package (32BLIT CONFIG REQUIRED PATHS ../32blit-sdk $ENV{PATH_32BLIT_SDK})

add_subdirectory(audio-test)
add_subdirectory(audio-wave)
add_subdirectory(doom-fire)
add_subdirectory(fizzlefade)
add_subdirectory(flight)
add_subdirectory(geometry)
add_subdirectory(jpeg)
add_subdirectory(logo)
add_subdirectory(matrix-test)
add_subdirectory(metadata-test)
add_subdirectory(mp3)
add_subdirectory(multiplayer)
add_subdirectory(palette-cycle)
add_subdirectory(palette-swap)
add_subdirectory(particle)
add_subdirectory(piano)
add_subdirectory(platformer)
add_subdirectory(profiler-test)
add_subdirectory(raycaster)
add_subdirectory(rotozoom)
add_subdirectory(saves)
add_subdirectory(scrolly-tile)
add_subdirectory(serial-debug)
add_subdirectory(shmup)
add_subdirectory(sprite-test)
add_subdirectory(text)
add_subdirectory(tilemap-test)
add_subdirectory(tilemap-types)
add_subdirectory(tilt)
add_subdirectory(timer-test)
add_subdirectory(tunnel)
add_subdirectory(tween-demo)
add_subdirectory(tween-test)
add_subdirectory(voxel)
add_subdirectory(waveform-demo)

# setup release packages
install (FILES ${PROJECT_DISTRIBS} DESTINATION .)
set (CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
set (CPACK_GENERATOR "ZIP" "TGZ")
include (CPack)
